# sentry-tauri

./: .gitignore  Cargo.toml  README.md  build.rs  package.json
.cargo/: config.toml
examples/basic-app/: package.json
examples/basic-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/basic-app/src-tauri/capabilities/: main.json
examples/basic-app/src-tauri/src/: lib.rs  main.rs
js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: lib.rs  panic.rs
