[package]
description = "An experimental Tauri Plugin for Sentry"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "sentry-tauri"
readme = "README.md"
repository = "https://github.com/timfish/sentry-tauri"
version = "0.2.0"

[dependencies]
base64 = { version = "0.21" }
minidump-writer = { version = "0.8", optional = true }
sentry = { version = "0.32", default-features = false }
sentry-backtrace = { version = "0.32", default-features = false }
serde = { version = "1" }
tauri = { version = "1" }
libc = { version = "0.2" }
windows-sys = { version = "0.52", features = ["Win32_System_Threading"] }

[features]
default = ["backtrace", "contexts", "debug-images", "panic", "transport"]
UNSTABLE_metrics = ["sentry/UNSTABLE_metrics"]

# default integrations
backtrace = ["sentry/backtrace"]
contexts = ["sentry/contexts"]
panic = ["dep:minidump-writer"]
# other integrations
anyhow = ["sentry/anyhow"]
debug-images = ["sentry/debug-images"]
log = ["sentry/log"]
slog = ["sentry/slog"]
tracing = ["sentry/tracing"]
# other features
test = ["sentry/test"]
debug-logs = ["sentry/debug-logs"]
# transports
transport = ["sentry/transport"]
reqwest = ["sentry/reqwest"]
curl = ["sentry/curl"]
surf-h1 = ["sentry/surf-h1"]
surf = ["sentry/surf"]
ureq = ["sentry/ureq"]
# transport settings
native-tls = ["sentry/native-tls"]
rustls = ["sentry/rustls"]
