[package]
description = "An experimental Tauri Plugin for Sentry"
edition = "2021"
rust-version = "1.70"
license = "MIT"
name = "tauri-plugin-sentry"
readme = "README.md"
repository = "https://github.com/alekitto/sentry-tauri"
version = "2.0.0"
links = "tauri-plugin-sentry"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta", features = ["build"] }

[dependencies]
base64 = { version = "0.22" }
minidump-writer = { version = "0.10", optional = true }
openssl = { version = "0.10" }
sentry = { version = "0.34", default-features = false }
sentry-backtrace = { version = "0.34", default-features = false }
sentry-log = { version = "0.34" }
serde = { version = "1" }
tauri = { version = "^2.0.0-beta" }
libc = { version = "0.2" }
windows-sys = { version = "0.59", features = ["Win32_System_Threading"] }

[features]
default = ["backtrace", "contexts", "debug-images", "panic", "transport"]
openssl-vedored = ["openssl/vendored"]
metrics = ["sentry/metrics"]

# default integrations
backtrace = ["sentry/backtrace"]
contexts = ["sentry/contexts"]
panic = ["dep:minidump-writer"]
# other integrations
anyhow = ["sentry/anyhow"]
debug-images = ["sentry/debug-images"]
log = ["sentry/log"]
slog = ["sentry/slog"]
tracing = ["sentry/tracing"]
# other features
test = ["sentry/test"]
debug-logs = ["sentry/debug-logs"]
# transports
transport = ["sentry/transport"]
reqwest = ["sentry/reqwest"]
curl = ["sentry/curl"]
surf-h1 = ["sentry/surf-h1"]
surf = ["sentry/surf"]
ureq = ["sentry/ureq"]
# transport settings
native-tls = ["sentry/native-tls"]
rustls = ["sentry/rustls"]
