[package]
authors = ["you"]
default-run = "app"
description = "A Tauri App"
edition = "2021"
license = ""
name = "app"
repository = ""
version = "0.1.0"

[build-dependencies]
tauri-build = {version = "2.0.0-beta", features = [] }

[dependencies]
sadness-generator = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-sentry = { path = "../../../", default-features = true }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
